--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Online Shop</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="app_name">UMKM2M Siantar Marimbun</string>
+    <string name="title_activity_main">UMKM2M Siantar Marimbun</string>
     <string name="list">List</string>
     <string name="order">Order</string>
     <string name="profile">Profile</string>
